[gd_scene load_steps=43 format=3 uid="uid://d0my7wkdn0s80"]

[ext_resource type="Script" path="res://CharacterBody2D.gd" id="1_cqcyl"]
[ext_resource type="Texture2D" uid="uid://g1m6jldp8wg2" path="res://assets/ gothicvania patreon collection/Gothic-hero-Files/PNG/gothic-hero-attack.png" id="2_14oai"]
[ext_resource type="Texture2D" uid="uid://86oj4rwkqmgq" path="res://assets/ gothicvania patreon collection/Gothic-hero-Files/PNG/gothic-hero-idle.png" id="2_s4ei1"]
[ext_resource type="Texture2D" uid="uid://xeaxnay7ejng" path="res://assets/ gothicvania patreon collection/Gothic-hero-Files/PNG/gothic-hero-jump.png" id="3_5np0s"]
[ext_resource type="Texture2D" uid="uid://bnjlrcn0ech5l" path="res://assets/ gothicvania patreon collection/Gothic-hero-p2-Files/PNG/spritesheets/gothic-hero-hurt.png" id="3_qwkai"]
[ext_resource type="Texture2D" uid="uid://dqkye05bqpgag" path="res://assets/ gothicvania patreon collection/Gothic-hero-Files/PNG/gothic-hero-run.png" id="3_uew1n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pmr2i"]
size = Vector2(30, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvogr"]
atlas = ExtResource("2_14oai")
region = Rect2(0, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu7bt"]
atlas = ExtResource("2_14oai")
region = Rect2(96, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_047wb"]
atlas = ExtResource("2_14oai")
region = Rect2(192, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_31pl2"]
atlas = ExtResource("2_14oai")
region = Rect2(288, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rpdg"]
atlas = ExtResource("2_14oai")
region = Rect2(384, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mcyg"]
atlas = ExtResource("2_14oai")
region = Rect2(480, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6meg"]
atlas = ExtResource("3_qwkai")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyhxx"]
atlas = ExtResource("3_qwkai")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1xl0"]
atlas = ExtResource("3_qwkai")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_acnjr"]
atlas = ExtResource("2_s4ei1")
region = Rect2(0, 0, 38, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8sby"]
atlas = ExtResource("2_s4ei1")
region = Rect2(38, 0, 38, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_amvos"]
atlas = ExtResource("2_s4ei1")
region = Rect2(76, 0, 38, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6fy7"]
atlas = ExtResource("2_s4ei1")
region = Rect2(114, 0, 38, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_elpye"]
atlas = ExtResource("3_5np0s")
region = Rect2(0, 0, 61, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv0yi"]
atlas = ExtResource("3_5np0s")
region = Rect2(61, 0, 61, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_32a7o"]
atlas = ExtResource("3_5np0s")
region = Rect2(122, 0, 61, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_lja3s"]
atlas = ExtResource("3_5np0s")
region = Rect2(183, 0, 61, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ynkt"]
atlas = ExtResource("3_5np0s")
region = Rect2(244, 0, 61, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvdri"]
atlas = ExtResource("3_uew1n")
region = Rect2(0, 0, 66, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_27l8y"]
atlas = ExtResource("3_uew1n")
region = Rect2(66, 0, 66, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwkpw"]
atlas = ExtResource("3_uew1n")
region = Rect2(132, 0, 66, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mp0p"]
atlas = ExtResource("3_uew1n")
region = Rect2(198, 0, 66, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1wlr"]
atlas = ExtResource("3_uew1n")
region = Rect2(264, 0, 66, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtyii"]
atlas = ExtResource("3_uew1n")
region = Rect2(330, 0, 66, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t11e"]
atlas = ExtResource("3_uew1n")
region = Rect2(396, 0, 66, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr0gj"]
atlas = ExtResource("3_uew1n")
region = Rect2(462, 0, 66, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qof3k"]
atlas = ExtResource("3_uew1n")
region = Rect2(528, 0, 66, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lob45"]
atlas = ExtResource("3_uew1n")
region = Rect2(594, 0, 66, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2vdu"]
atlas = ExtResource("3_uew1n")
region = Rect2(660, 0, 66, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dps2c"]
atlas = ExtResource("3_uew1n")
region = Rect2(726, 0, 66, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_nfoar"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvogr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu7bt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_047wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31pl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rpdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mcyg")
}],
"loop": true,
"name": &"attack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6meg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyhxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1xl0")
}],
"loop": true,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_acnjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8sby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amvos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6fy7")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_elpye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv0yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32a7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lja3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ynkt")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvdri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27l8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwkpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mp0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1wlr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtyii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t11e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr0gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qof3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lob45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2vdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dps2c")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_jubcg"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sword_W/SwordCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kai61"]
resource_name = "attack"
length = 0.8
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.6, 0.8)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sword_W/SwordCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fljo4"]
_data = {
"RESET": SubResource("Animation_jubcg"),
"attack": SubResource("Animation_kai61")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xasq6"]
size = Vector2(35, 11)

[node name="CharacterBody2D" type="CharacterBody2D"]
position = Vector2(981, 420)
scale = Vector2(0.5, 0.5)
script = ExtResource("1_cqcyl")

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_pmr2i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -2)
sprite_frames = SubResource("SpriteFrames_nfoar")
animation = &"attack"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_fljo4")
}

[node name="Sword_W" type="Area2D" parent="."]

[node name="SwordCollision" type="CollisionShape2D" parent="Sword_W"]
position = Vector2(36.5, -3.5)
shape = SubResource("RectangleShape2D_xasq6")
debug_color = Color(0.992157, 0, 0.25098, 0.419608)

[connection signal="take_damage" from="." to="." method="_on_take_damage"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_shape_entered" from="Sword_W" to="." method="_on_sword_w_area_shape_entered"]
